--- a/appstyle.qrc
+++ b/appstyle.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>appstyles.qss</file>
+        <file>calculator.png</file>
     </qresource>
+    <qresource prefix="/icon"/>
+    <qresource prefix="/icon" lang="icon"/>
 </RCC>
