--- a/appstyles.qss
+++ b/appstyles.qss
@@ -62,3 +62,7 @@ QScrollBar::sub-line:horizontal {
      border: 1px solid rgb(33, 33, 33);
      background: rgb(33, 33, 33);
 }
+
+QLineEdit{
+    border: 1px solid rgb(33, 33, 33);
+}
